# templated-sql-query-dataset

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/templated_sql_query_dataset/: __init__.py  templated_sql_query_dataset.py
tests/: test_templated_sql_query_dataset.py
