[tool.poetry]
name = "templated-sql-query-dataset"
version = "0.1.0"
description = ""
authors = ["Flavien Lambert"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/templated_sql_query_dataset"}]

[tool.poetry.dependencies]
python = "~3.9"
kedro = {extras = ["pandas"], version = "^0.18.3"}
Jinja2 = "^3.1.2"
pandas = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
