[tool.poetry]
name = "templated-sql-query-dataset"
version = "0.1.0"
description = ""
authors = ["Flavien Lambert"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/templated_sql_query_dataset"}]

[tool.poetry.dependencies]
python = "~3.9"
kedro = {extras = ["pandas"], version = "^0.18.3"}
Jinja2 = "^3.1.2"
pandas = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ipython = "^8.5.0"
pre-commit = "^2.20.0"
python-semantic-release = "^7.32.2"

[tool.isort]
profile = "black"
lines_between_types = 1
lines_after_imports = 2

# Organize sections in the following order
# Note that the name of the firstparty is specific
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = "src"
import_heading_future = "Future"
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third-party"
import_heading_localfolder = "Local"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "src/templated_sql_query_dataset/__init__.py:__version__",
    "pyproject.toml:version"
]
version_source = "tag"
commit_version_number = true
commit_subject = "chore(release): v{version}"
commit_message = "Released version {version}. See the changelog for changes."
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = false
